
<resources>
	<string name="app_name" translatable="false">EraNews</string>
	<string name="about_nc">О программе</string>
	<string name="about_nc_desc">Дополнительная информация</string>
	<string name="loading">Загрузка</string>
	<string name="settings">Настройки</string>
	<string name="bookmarks">Закладки</string>
	<string name="favorites">Избранное</string>
	<string name="about">Доп.Информация</string>
	<string name="news">Новости</string>
	<string name="search_results_for">Что ищем?</string>
	<string name="suc_import">Импортирование успешно!</string>
	<string name="import_failed">Ошибка импортирования!</string>
	<string name="suc_backup">Бэкап выполнен!</string>
	<string name="backup_failed">Ошибка бэкапа!</string>
	<string name="suc_restore">Восстановление завершено!</string>
	<string name="restore_failed">Ошибка восстановления!</string>
	<string name="suc_share">Поделился успешно!</string>
	<string name="share_failed">Не удалось поделиться!</string>
	<string name="logged_in_as">Авторизовался как</string>
	<string name="del_acc_info">Выход</string>
	<string name="open_in_browser">Открыть в браузере</string>
	<string name="share">Поделиться</string>
	<string name="what_searching">Что нужно найти?</string>
	<string name="custom_tabs_title">Браузер в приложении</string>
	<string name="use_custom_tabs">Использовать браузер в приложения. Это быстрее, чем просто открыть сайт</string>
	<string name="clear_cache_title">Очистить кэш</string>
	<string name="clear_cache_desc">Очистка кэша</string>
	<string name="cleared_cache">Кэш очищен</string>
	<string name="clear_history_title">Очистить историю</string>
	<string name="clear_history_desc">Очистка истории</string>
	<string name="cleared_history">Полная очистка истории</string>
	<string name="language">Язык</string>
	<string name="backup">Бэкап</string>
	<string name="restore">Восстановление</string>
	<string name="import_opml">Импортировать OPML файл для RSS</string>
	<string name="import_opml_hint">Вставьте OPML файл сюда</string>
	<string name="pref_import_opml_desc">Импортировать новости из файла OPML</string>
	<string name="mark_as_bookmark">Сделать закладкой</string>
	<string name="used_libraries">Используемая библиотека</string>
	<string name="view_all_libraries">Посмотреть всю библиотеку</string>
	<string name="used_apis">Использованные API</string>
	<string name="view_all_apis">Посмотреть все API, использованные программой</string>
	<string name="general">Главная</string>
	<string name="refresh">Обновить</string>
	<string name="add_shortcut">Добавить ярлык</string>
	<string name="shortcut_created">Ярлык создан</string>
	<string name="mark_as_favorite">Сделать избранным</string>
	<string name="help">Помощь</string>
	<string name="advanced">Расширенное</string>
	<string name="nothing_found">Ничего не найдено!</string>
	<string name="article_image">Название сайта</string>
	<string name="prefs_amp">Откалиброванные мобильные страницы</string>
	<string name="prefs_amp_desc">Загрузить откалиброванные мобильные страницы с сайтов</string>
	<string name="sharing_tt">Поделиться EraNews</string>
	<string name="edit_feed_title">Изменить название</string>
	<string name="backup_restore">Бэкап и восстановление</string>
	<string name="backup_desc">Бэкап или восстановление всех избранных источников новостей, закладок и т.д.</string>
	<string name="sort">Сортировка</string>
	<string name="set">Set</string>
	<string name="sync">Синхронизация</string>
	<string name="sync_desc">Сделать синхронизацию автоматической</string>
	<string name="sync_now">Синхронизировать сейчас</string>
	<string name="sync_interval">Интервал синхронизации</string>
	<string name="prefs_url_shortener">Короткие ссылки</string>
	<string name="prefs_url_shortener_desc">Включение коротких ссылок для удобства.</string>
	<string name="more">Еще</string>
	<string name="last_feeds">Последние новости</string>
	<string name="recommendations">Рекомендации</string>
	<string name="rec_topics">Рекомендуемые темы</string>
	<string name="never">Никогда</string>
	<string name="last_suc_sync">Успешная последняя синхронизация</string>
	<string name="newest_first">От нового к старому</string>
	<string name="oldest_first">От старого к новому</string>
	<string name="shared_with_nc">Поделиться EraNews ( http://vk.com/broken_justice )</string>
	<string name="try_nc">Попробовать EraNews ( http://vk.com/broken_justice ), это бесплатно.
    </string>
	<string name="submit_issue">Связаться с разработчиком</string>
	<string name="restore_key">Ключ восстановления</string>
	<string name="restore_key_desc">Вам нужно копировать этот ключ для восстановления из бекапа.</string>
	<string name="this_is_article">Этот сайт</string>
	<string name="search_for_feeds">Искать новости этого источника</string>
	<string name="name">Article</string>
	<string name="privacy_policy">Политика конфиденциальности</string>
	<string name="article_tip_zoom">Если текст маленького размера, вы можете его увеличить с помощью зума двумя пальцами).</string>
	<string name="nothing_bookmarked">Еще ничего не добавлено в закладки!</string>
	<string name="nothing_marked_favorite">Еще ничего не добавлено в избранное!</string>
	<string name="show_tutorial">Показать обучение еще раз</string>
	<string name="gg_0">Добро пожаловать в приложение EraNews! Это программа короткого обучения расскажет как пользоваться приложением.Нажмите в любом месте для продолжения…</string>
	<string name="gg_1">Здесь вы можете найти последние новости. Выбрать новость, добавить в закладки. Сохранить в изранное интересуемые статьи для быстрого доступа к ним позже.</string>
	<string name="gg_2">Если вы сохранили что-то в закладки, оно будет здесь.</string>
	<string name="gg_3">Изменить настройки приложения под себя можно тут.</string>
	<string name="gg_4">Здесь вы можете искать новости прямым доступом к новостному сайту или просто можете ввести ссылку RSS для подписки.</string>
	<string name="gg_5">Удачи!</string>
	<string name="thanks_purchase">Спасибо!</string>
	<string name="thanks_purchase_desc">будетпотом.</string>
	<string name="show_recent_feeds">Показывать последние новости</string>
	<string name="show_recommended_feeds">Показывать рекомендуемые новости</string>
	<string name="on_the_news_page">На странице новостей</string>
</resources>